--- a/packages/cli/tmux/config/.tmux.conf
+++ b/packages/cli/tmux/config/.tmux.conf
@@ -2,9 +2,9 @@
 ############################################################################
 # Colors
 ############################################################################
-set-option -g status-bg blue
+set-option -g status-bg colour55
 set-option -g status-fg white
-set-option -g pane-active-border-fg blue
+set-option -g pane-active-border-fg colour55
 
 ############################################################################
 # Term
