Minor fixes to nvim configs

--- a/packages/cli/tmux/config/.tmux.conf
+++ b/packages/cli/tmux/config/.tmux.conf
@@ -11,7 +11,7 @@ set-option -g pane-active-border-fg colour55
 ############################################################################
 set -g default-terminal "screen-256color"
 # Don't clear when exiting vim or man pages
-set-window-option -g alternate-screen off
+set-window-option -g alternate-screen on
 
 ############################################################################
 # Indexing (irssi style)
@@ -54,6 +54,10 @@ set -g @continuum-save-interval '5'
 set -g @prefix_highlight_fg 'blue'
 set -g @prefix_highlight_bg 'white'
 
+############################################################################
+# Misc
+############################################################################
+set-option -g mouse on
 ############################################################################
 # Plugins
 ############################################################################
