--- a/packages/shell/common/.rc
+++ b/packages/shell/common/.rc
@@ -37,6 +37,10 @@ fi
 if [ -r ~/.dir_colors ]; then
     eval $(dircolors ~/.dir_colors);
 fi
+# If not running interactively, do not do anything
+[[ $- != *i* ]] && return
+[[ -z "$TMUX" ]] && exec tmux
 
 alias resedit='vim ~/Documents/resume/jason_blocklove_resume.tex ~/Documents/resume/awesome-cv.cls ~/Documents/resume/resume/*.tex'
 alias caps='xmodmap ~/.xmodmap'
+alias party='curl parrot.live'
