--- a/packages/cli/tmux/config/.tmux.conf
+++ b/packages/cli/tmux/config/.tmux.conf
@@ -1,10 +1,9 @@
-
 ############################################################################
 # Colors
 ############################################################################
-set-option -g status-bg colour55
-set-option -g status-fg white
-set-option -g pane-active-border-fg colour55
+set-option -g status-bg colour234
+set-option -g status-fg colour137
+set-option -g pane-active-border-fg colour234
 
 ############################################################################
 # Term
@@ -18,6 +17,7 @@ set-window-option -g alternate-screen on
 ############################################################################
 set -g base-index 1
 setw -g pane-base-index 1
+set -g renumber-windows on
 
 bind 0 select-window -t 10
 ############################################################################
@@ -36,11 +36,52 @@ bind-key S-Right swap-window -t +1
 set -sg escape-time 0
 
 ############################################################################
+# Window Mode
+############################################################################
+setw -g mode-bg colour6
+setw -g mode-fg colour0
+############################################################################
+# Window Status
+############################################################################
+set-window-option -g window-status-format ' #F#I:#W#F '
+set-window-option -g window-status-current-format ' #F#I:#W#F '
+setw -g window-status-format "#[fg=magenta]#[bg=black] #I #[bg=cyan]#[fg=colour8] #W "
+setw -g window-status-current-format "#[bg=brightmagenta]#[fg=colour8] #I #[fg=colour8]#[bg=colour14] #W "
+setw -g window-status-current-bg colour0
+setw -g window-status-current-fg colour11
+setw -g window-status-current-attr dim
+setw -g window-status-bg green
+setw -g window-status-fg black
+setw -g window-status-attr reverse
+set -g status-left ''
+############################################################################
 # Status Line
 ############################################################################
-set -g status-right '#{prefix_highlight} %a %Y-%m-%d %H:%M | #{pane_title}'
+set -g status-justify left
+set -g status-bg default
+set -g status-fg colour12
+set -g status-interval 2
+set -g status-attr dim
+set -g status-left ''
+#set -g status-right '#S'
+set -g status-right "#(whoami)#[default]@#H | #S"
+set -g status-right-length 50
 set -g status-left-length 20
-set -g status-left ' #{session_name} | '
+
+setw -g window-status-current-fg colour81
+setw -g window-status-current-bg colour238
+setw -g window-status-current-attr bold
+setw -g window-status-current-format ' #I#[fg=colour250]:#[fg=colour255]#W#[fg=colour50]#F '
+
+setw -g window-status-fg colour138
+setw -g window-status-bg colour235
+setw -g window-status-attr none
+setw -g window-status-format ' #I#[fg=colour237]:#[fg=colour250]#W#[fg=colour244]#F '
+
+setw -g window-status-bell-attr bold
+setw -g window-status-bell-fg colour255
+setw -g window-status-bell-bg colour1
+#set -g status-left-length 20
 
 ############################################################################
 # Restore automatically
@@ -53,11 +94,16 @@ set -g @continuum-save-interval '5'
 ############################################################################
 set -g @prefix_highlight_fg 'blue'
 set -g @prefix_highlight_bg 'white'
-
+############################################################################
+# Rebinding
+############################################################################
+unbind C-b
+set -g prefix C-Space
+bind C-Space send-prefix
 ############################################################################
 # Misc
 ############################################################################
-set-option -g mouse on
+#set-option -g mouse on
 ############################################################################
 # Plugins
 ############################################################################
