--- a/packages/shell/common/.rc
+++ b/packages/shell/common/.rc
@@ -45,3 +45,4 @@ alias resedit='vim ~/Documents/resume/jason_blocklove_resume.tex ~/Documents/res
 alias caps='xmodmap ~/.xmodmap'
 alias party='curl parrot.live'
 alias nvimfiles='vim ~/dotfiles/packages/cli/nvim/config/nvim/init.vim ~/dotfiles/packages/cli/nvim/config/nvim/nvimFiles/*.vim'
+alias circuitMod='java -jar ~/CircuitMod-v2.7/CircuitMod.jar'
