--- a/packages/desktop/i3/config/i3.config
+++ b/packages/desktop/i3/config/i3.config
@@ -1,173 +1,186 @@
-#######################################################################
-#                              variables                              #
-#######################################################################
-
+############################################################
+#						Variables					   	   #
+############################################################
 set $mod Mod4
+set $bg-color 	         #2f343f
+set $inactive-bg-color   #2f343f
+set $text-color          #f3f4f5
+set $inactive-text-color #676E7D
+set $urgent-bg-color 	 #E53935
 
-set $browser = chromium
-
-set $background		#2b303b
-set $foreground		#65737e
-set $outline		#c0c5ce
-
-
-floating_modifier			$mod
-popup_during_fullscreen     smart
-focus_follows_mouse     no
-
-#######################################################################
-#                                font                                 #
-#######################################################################
-
-font pango:monospace 8
-
-#######################################################################
-#                               colors                                #
-#######################################################################
-
-client.focused              $foreground $foreground $background $foreground
-client.focused_inactive     $background $background $foreground $background
-client.unfocused 			$background $background $foreground $background
-
-#######################################################################
-#                               borders                               #
-#######################################################################
-hide_edge_borders none # hiding borders
-new_window pixel 4
-
-set $default_gaps_inner 12
-set $default_gaps_outer 3
-gaps inner $default_gaps_inner  
-gaps outer $default_gaps_outer  
-
-for_window [class="^Firefox$"] border none
-for_window [class="^Thunderbird$"] border none
-for_window [class="^Chromium$"] border none
-
-#######################################################################
-#                             i3 bindings                             #
-#######################################################################
-
-bindsym                 $mod+Shift+c reload
-bindsym                 $mod+Shift+r restart
-bindsym 				$mod+Shift+e exec "i3-nagbar -t warning -m 'Do you really want to logout?' -b 'Yes, logout' 'i3-msg exit'"
-
-#######################################################################
-#                         launcher & terminal                         #
-#######################################################################
-
-bindsym 				$mod+Return exec xfce4-terminal
-bindsym					$mod+space exec rofi -show run -terminal xfce4-terminal -lines 5 -eh 2 -opacity "70" -bw 1 -bc "#22262f" -bg "$background" -fg "$foreground" -hlbg "$outline" -hlfg "$background" -width 100 -padding 400
-bindsym 				$mod+l exec ~/.i3/lock/lock.sh # lock system
-bindsym 				$mod+Shift+l exec ~/.i3/bin/logout-menu.sh # lock system
-
-#######################################################################
-#                           focus bindings                            #
-#######################################################################
-
-bindsym                 $mod+Left workspace prev
-bindsym                 $mod+Right workspace next
-bindsym					$mod+Shift+n exec ~/.i3/bin/workspace-new.sh
-
-bindsym					$mod+Ctrl+Left move to workspace prev
-bindsym					$mod+Ctrl+Right move to workspace next
-
-bindsym 				$mod+Shift+Left move left
-bindsym 				$mod+Shift+Down move down
-bindsym 				$mod+Shift+Up move up
-bindsym 				$mod+Shift+Right move right
-
-bindsym $mod+1   		workspace 1
-bindsym $mod+2        	workspace 2
-bindsym $mod+3         	workspace 3
-bindsym $mod+4         	workspace 4
-bindsym $mod+5        	workspace 5
-bindsym $mod+6        	workspace 6
-bindsym $mod+7        	workspace 7
-bindsym $mod+8        	workspace 8
-bindsym $mod+9        	workspace 9
-bindsym $mod+0         	workspace 10
-
-bindsym $mod+Shift+1	move container to workspace 1
-bindsym $mod+Shift+2   	move container to workspace 2
-bindsym $mod+Shift+3    move container to workspace 3
-bindsym $mod+Shift+4  	move container to workspace 4
-bindsym $mod+Shift+5  	move container to workspace 5
-bindsym $mod+Shift+6   	move container to workspace 6
-bindsym $mod+Shift+7   	move container to workspace 7
-bindsym $mod+Shift+8    move container to workspace 8
-bindsym $mod+Shift+9    move container to workspace 9
-bindsym $mod+Shift+0   	move container to workspace 10
-#######################################################################
-#                           layout bindings                           #
-#######################################################################
-
-bindsym                 $mod+e layout toggle split
-bindsym                 $mod+f fullscreen
-
-bindsym                 $mod+h split h
-bindsym                 $mod+v split v
-
-bindsym                 $mod+Shift+s floating toggle
-
-# kill focused window
-bindsym 				$mod+q kill 
-# change container layout (stacked, tabbed, toggle split)
-bindsym $mod+a layout stacking
-bindsym $mod+Shift+a layout tabbed
-bindsym $mod+s layout toggle split
-
-#######################################################################
-#                                modes                                #
-#######################################################################
-
-mode                    "resize" {
-    bindsym             h resize shrink width $myres px or $myres ppt
-    bindsym             j resize grow height $myres px or $myres ppt
-    bindsym             k resize shrink height $myres px or $myres ppt
-    bindsym             l resize grow width $myres px or $myres ppt
-
-    bindsym             Left resize shrink width $myres px or $myres ppt
-    bindsym             Right resize grow width $myres px or $myres ppt
-    bindsym             Down resize grow height $myres px or $myres ppt
-    bindsym             Up resize shrink height $myres px or $myres ppt
-
-    bindsym             Escape mode "default"
-}
-bindsym                 $mod+r mode "resize"
-
-#######################################################################
-#                                 bar                                 #
-#######################################################################
-
-bar {
-	status_command i3status
-	position top
-	colors {
-		background $background
-		statusline $outline
-		separator $foreground
-
-	}
-}
-
-#######################################################################
-#                               startup                               #
-#######################################################################
-
-exec xfce4-terminal
-exec nitrogen --restore
-exec variety --resume
-# Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
+############################################################
+#						Font                               #
+############################################################
+# sets general i3 font
+font pango:monospace 8
+
+############################################################
+#						Bindings                           #
+############################################################
 # start a terminal
+bindsym $mod+Return exec i3-sensible-terminal
+# kill focused window
+bindsym $mod+Shift+q kill
+# start dmenu or rofi (a program launcher)
+bindsym Mod1+F3 exec rofi -show run -font "System San Francisco Display 14"
+bindsym $mod+d exec rofi -show run -font "System San Francisco Display 14"
+# Firefox shortcut
+bindsym $mod+i exec firefox
+# Start Rofi ssh
+bindsym $mod+F7 exec rofi -show ssh -font "System San Francisco Display 14"
+# Thunar shortcut
+bindsym $mod+u exec thunar
+#lock screen
+bindsym control+Mod1+l exec i3lock_improved --lock
 
+############################################################
+#						Gaps                               #
+############################################################
+#Remove Winodw Titlebars and set size of border(needed for gaps)
+for_window [class="^.*"] border pixel 2
+smart_borders on
+smart_gaps on
+gaps inner 17
+gaps outer 3
 
+############################################################
+#						General i3 Bindings                #
+############################################################
+# change focus
+bindsym $mod+h focus left
+bindsym $mod+j focus down
+bindsym $mod+k focus up
+bindsym $mod+l focus right
 
-# start dmenu (a program launcher)
-bindsym $mod+d exec dmenu_run
+# move focused window
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
 
+# split in horizontal orientation
+bindsym $mod+Control+h split h
+# split in vertical orientation
+bindsym $mod+Control+v split v
 
+# enter fullscreen mode for the focused container
+bindsym $mod+f fullscreen toggle
 
+# change container layout (stacked, tabbed, toggle split)
+bindsym $mod+s layout stacking
+bindsym $mod+w layout tabbed
+bindsym $mod+e layout toggle split
 
+# toggle tiling / floating
+bindsym $mod+Shift+space floating toggle
+
+# change focus between tiling / floating windows
+bindsym $mod+space focus mode_toggle
+
+# focus the parent container
+bindsym $mod+a focus parent
+
+# switch to workspace
+bindsym $mod+1 workspace 1
+bindsym $mod+2 workspace 2
+bindsym $mod+3 workspace 3
+bindsym $mod+4 workspace 4
+bindsym $mod+5 workspace 5
+bindsym $mod+6 workspace 6
+bindsym $mod+7 workspace 7
+bindsym $mod+8 workspace 8
+bindsym $mod+9 workspace 9
+bindsym $mod+0 workspace 10
+bindsym $mod+Left workspace prev
+bindsym $mod+Right workspace next
+
+# move focused container to workspace
+bindsym $mod+Shift+1 move container to workspace 1
+bindsym $mod+Shift+2 move container to workspace 2
+bindsym $mod+Shift+3 move container to workspace 3
+bindsym $mod+Shift+4 move container to workspace 4
+bindsym $mod+Shift+5 move container to workspace 5
+bindsym $mod+Shift+6 move container to workspace 6
+bindsym $mod+Shift+7 move container to workspace 7
+bindsym $mod+Shift+8 move container to workspace 8
+bindsym $mod+Shift+9 move container to workspace 9
+bindsym $mod+Shift+0 move container to workspace 10
+bindsym $mod+Shift+Left move container to workspace prev
+bindsym $mod+Shift+Right move container to workspace next
+
+# reload the configuration file
+bindsym $mod+Shift+c reload
+# restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
+bindsym $mod+Shift+r restart
+# exit i3 (logs you out of your X session)
+bindsym $mod+Shift+e exit
+
+# resize window (you can also use the mouse for that)
+mode "resize" {
+        # These bindings trigger as soon as you enter the resize mode
+
+        bindsym h resize shrink width 10 px or 10 ppt
+        bindsym j resize grow height 10 px or 10 ppt
+        bindsym k resize shrink height 10 px or 10 ppt
+        bindsym l resize grow width 10 px or 10 ppt
+
+        # same bindings, but for the arrow keys
+        bindsym Left resize shrink width 10 px or 10 ppt
+        bindsym Down resize grow height 10 px or 10 ppt
+        bindsym Up resize shrink height 10 px or 10 ppt
+        bindsym Right resize grow width 10 px or 10 ppt
+
+        # back to normal: Enter or Escape
+        bindsym Return mode "default"
+        bindsym Escape mode "default"
+}
+
+bindsym $mod+r mode "resize"
+
+############################################################
+#						Function Keys                      #
+############################################################
+# Pulse Audio controls
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
+
+# Sreen brightness controls
+bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
+bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
+
+# Touchpad controls
+#bindsym XF86TouchpadToggle exec /some/path/toggletouchpad.sh # toggle touchpad
+
+# Media player controls
+bindsym XF86AudioPlay exec playerctl play-pause
+bindsym XF86AudioNext exec playerctl next
+bindsym XF86AudioPrev exec playerctl previous
+
+############################################################
+#						Autostart                          #
+############################################################
+#Autostart programs
+exec spotify
+exec plexmediaplayer
+exec franz
+exec nylas
+exec compton
+exec nm-applet
+exec dropbox
+exec_always --no-startup-id /home/jason/.config/polybar/launch.sh
+
+exec xfce4_terminal -e caps
+#Set wallpaper
+exec_always feh --bg-scale /home/jason/Pictures/peaks.png
+
+############################################################
+#						Misc                               #
+############################################################
+# Set programs to always open in certain workspaces
+for_window [class="Spotify"] move to workspace 8
+for_window [class="plexmediaplayer"] move to workspace 8
+assign [class="Franz"] 9
+assign [class="Nylas Mail"] 10
