--- a/packages/desktop/i3/config/i3.config
+++ b/packages/desktop/i3/config/i3.config
@@ -148,8 +148,8 @@ bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #d
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
 
 # Sreen brightness controls
-bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
-bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
+bindsym XF86MonBrightnessUp exec light -A 5 # increase screen brightness
+bindsym XF86MonBrightnessDown exec light -U 5 # decrease screen brightness
 
 # Touchpad controls
 #bindsym XF86TouchpadToggle exec /some/path/toggletouchpad.sh # toggle touchpad
@@ -174,7 +174,7 @@ exec_always --no-startup-id /home/jason/.config/polybar/launch.sh
 
 exec xfce4_terminal -e caps
 #Set wallpaper
-exec_always feh --bg-scale /home/jason/Pictures/peaks.png
+exec_always feh --bg-scale /home/jason/Pictures/the_fellowship.jpg
 
 ############################################################
 #						Misc                               #
