--- a/packages/desktop/i3/config/polybar.config
+++ b/packages/desktop/i3/config/polybar.config
@@ -21,10 +21,11 @@ font-2 = Termsynu:size=8:antialias=false;-2
 font-3 = Font Awesome 5 Free:pixelsize=10;0
 font-4 = Font Awesome 5 Free Solid:pixelsize=10;0
 font-5 = Font Awesome 5 Brands:pixelsize=10;0
+font-6 = unifont:size=6;-3
 
-modules-left = ;mopidy-mpd
+modules-left = ;
 modules-center = xwindow
-modules-right = volume wireless-network wired-network battery date
+modules-right = backlight volume wireless-network wired-network battery date
 
 tray-position = left
 tray-padding = 2
@@ -206,6 +207,13 @@ label-occupied-padding = 1
 label-empty = 
 label-empty-padding = 1
 
+[module/backlight]
+type = internal/backlight
+card = intel_backlight
+format =  <label>
+
+label = %percentage%
+
 [module/cpu]
 type = internal/cpu
 interval = 0.5
@@ -261,33 +269,6 @@ bar-used-empty = ─
 bar-used-empty-font = 6
 bar-used-empty-foreground = #444444
 
-[module/mopidy-mpd]
-type = internal/mopidy-mpd
-format-online = <icon-prev> <icon-stop> <toggle> <icon-next>  <icon-repeat> <icon-random>  <bar-progress> <label-time>  <label-song>
-
-icon-play = 
-icon-pause =
-icon-stop =
-icon-prev =
-icon-next =
-icon-random = 
-icon-repeat =
-
-toggle-on-foreground =
-toggle-off-foreground = #55
-
-bar-progress-width = 45
-bar-progress-format = %{A4:mpdseek+2: A5:mpdseek-2:}%fill%%indicator%%empty%%{A A}
-bar-progress-indicator = |
-bar-progress-indicator-foreground = #ff
-bar-progress-indicator-font = 3
-bar-progress-fill = ─
-bar-progress-fill-foreground = #bb
-bar-progress-fill-font = 3
-bar-progress-empty = ─
-bar-progress-empty-font = 3
-bar-progress-empty-foreground = #44
-
 [module/wireless-network]
 type = internal/network
 interface = wlp2s0
@@ -330,38 +311,6 @@ label-volume-foreground = ${root.foreground}
 ramp-volume-0 = 
 ramp-volume-1 = 
 ramp-volume-2 = 
-
-[module/powermenu]
-type = custom/menu
-
-format-padding = 5
-
-label-open = 
-label-close = 
-
-menu-0-0 = Terminate WM
-menu-0-0-foreground = #fba922
-menu-0-0-exec = bspc quit -1
-menu-0-1 = Reboot
-menu-0-1-foreground = #fba922
-menu-0-1-exec = menu_open-1
-menu-0-2 = Power off
-menu-0-2-foreground = #fba922
-menu-0-2-exec = menu_open-2
-
-menu-1-0 = Cancel
-menu-1-0-foreground = #fba922
-menu-1-0-exec = menu_open-0
-menu-1-1 = Reboot
-menu-1-1-foreground = #fba922
-menu-1-1-exec = sudo reboot
-
-menu-2-0 = Power off
-menu-2-0-foreground = #fba922
-menu-2-0-exec = sudo poweroff
-menu-2-1 = Cancel
-menu-2-1-foreground = #fba922
-menu-2-1-exec = menu_open-0
 
 [module/clock]
 type = internal/date
