Updates to i3 and polybar configs

--- a/packages/desktop/i3/config/i3.config
+++ b/packages/desktop/i3/config/i3.config
@@ -35,6 +35,8 @@ bindsym $mod+u exec thunar
 #lock screen
 bindsym control+Mod1+l exec i3lock_improved --lock
 
+# Toggle between internal and external monitor configs
+bindsym $mod+Shift+s exec --no-startup-id /home/jason/monitors.sh
 ############################################################
 #						Gaps                               #
 ############################################################
