--- a/packages/desktop/i3/config/polybar.config
+++ b/packages/desktop/i3/config/polybar.config
@@ -85,10 +85,12 @@ bar-capacity-empty = █
 bar-capacity-empty-font = 3
 bar-capacity-empty-foreground = #44ffffff
 
+animation-charging-foreground = #0033cc
 animation-charging-0 = 
 animation-charging-1 = 
 animation-charging-2 = 
 animation-charging-3 = 
+animation-charging-4-foreground = #00cc00
 animation-charging-4 = 
 animation-charging-framerate = 750
 
