Changes to accommodate multiple monitor setups

--- a/packages/desktop/i3/config/i3.config
+++ b/packages/desktop/i3/config/i3.config
@@ -29,7 +29,7 @@ bindsym $mod+d exec rofi -show run -font "System San Francisco Display 14"
 # Firefox shortcut
 bindsym $mod+i exec firefox
 # Start Rofi ssh
-bindsym $mod+F7 exec rofi -show ssh -font "System San Francisco Display 14"
+bindsym Mod1+F7 exec rofi -show ssh -font "System San Francisco Display 14"
 # Thunar shortcut
 bindsym $mod+u exec thunar
 #lock screen
@@ -112,12 +112,18 @@ bindsym $mod+Shift+0 move container to workspace 10
 bindsym $mod+Shift+Left move container to workspace prev
 bindsym $mod+Shift+Right move container to workspace next
 
+# move workspace to other monitor
+bindsym $mod+Control+Left move workspace to output left
+bindsym $mod+Control+Right move workspace to output right
+
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exit
+# Focus does not follow mouse
+focus_follows_mouse no
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -166,15 +172,14 @@ bindsym XF86AudioPrev exec playerctl previous
 ############################################################
 #Autostart programs
 exec spotify
-exec plexmediaplayer
+exec plexmediaplayer --scale-factor 2
 exec franz
-exec nylas
+exec thunderbird
 exec compton
 exec nm-applet
 exec dropbox
 exec_always --no-startup-id /home/jason/.config/polybar/launch.sh
 
-exec xfce4_terminal -e caps
 #Set wallpaper
 exec_always feh --bg-scale /home/jason/Pictures/the_fellowship.jpg
 
@@ -184,5 +189,6 @@ exec_always feh --bg-scale /home/jason/Pictures/the_fellowship.jpg
 # Set programs to always open in certain workspaces
 for_window [class="Spotify"] move to workspace 8
 for_window [class="plexmediaplayer"] move to workspace 8
+for_window [class="GLava"] move to workspace 8
 assign [class="Franz"] 9
-assign [class="Nylas Mail"] 10
+assign [class="Thunderbird"] 10
