--- a/packages/desktop/i3/config/polybar.config
+++ b/packages/desktop/i3/config/polybar.config
@@ -1,9 +1,10 @@
 # vim: set syn=dosini:
 
 [bar/top]
-monitor = eDP-1
+monitor = HDMI-1
+monitor-fallback = eDP-1
 width = 100%
-height = 30
+height = 22
 
 background = #00000000
 foreground = #ccffffff
@@ -15,7 +16,7 @@ spacing = 2
 padding-right = 5
 module-margin = 4
 
-font-0 = NotoSans-Regular:size=9;-1
+font-0 = NotoSans-Regular:size=8;-1
 font-1 = MaterialIcons:size=10;0
 font-2 = Termsynu:size=8:antialias=false;-2
 font-3 = Font Awesome 5 Free:pixelsize=10;0
@@ -31,7 +32,8 @@ tray-position = left
 tray-padding = 2
 
 [bar/bottom]
-monitor = eDP-1
+monitor = HDMI-1
+monitor-fallback = eDP-1
 bottom = true
 width = 100%
 height = 27
@@ -66,6 +68,7 @@ full-at = 98
 
 format-charging = <animation-charging> <label-charging>
 format-discharging = <ramp-capacity> <label-discharging>
+format-full-foreground = #00cc00
 format-full = <ramp-capacity> <label-full>
 
 ramp-capacity-0 = 
@@ -90,7 +93,6 @@ animation-charging-0 = 
 animation-charging-1 = 
 animation-charging-2 = 
 animation-charging-3 = 
-animation-charging-4-foreground = #00cc00
 animation-charging-4 = 
 animation-charging-framerate = 750
 
