Fixed interactive comments for zsh 5.5

--- a/packages/shell/zsh/config/run/.env
+++ b/packages/shell/zsh/config/run/.env
@@ -114,6 +114,11 @@ setopt hist_ignore_space
 
 setopt beep notify
 
+# Interactive comments (allow comments in interactive shell)
+
+setopt interactivecomments
+
+
 # key bindings
 
 HISTFILE=~/.config/.histfile
