Updated polybar and started to add support for dropdown TUI applications

--- a/packages/desktop/i3/config/i3.config
+++ b/packages/desktop/i3/config/i3.config
@@ -20,7 +20,8 @@ font pango:monospace 8
 #						Bindings                           #
 ############################################################
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec xfce4-terminal
+bindsym $mod+g exec cool-retro-term
 # kill focused window
 bindsym $mod+Shift+q kill
 # start dmenu or rofi (a program launcher)
@@ -34,9 +35,11 @@ bindsym Mod1+F7 exec rofi -show ssh -font "System San Francisco Display 14"
 bindsym $mod+u exec thunar
 #lock screen
 bindsym control+Mod1+l exec i3lock_improved --lock
+# Fix lockscreen image sizing
+bindsym $mod+Shift+s exec --no-startup-id /home/jason/lock_fix.sh
 
 # Toggle between internal and external monitor configs
-bindsym $mod+Shift+s exec --no-startup-id /home/jason/monitors.sh
+bindsym $mod+Shift+m exec --no-startup-id /home/jason/monitors.sh
 ############################################################
 #						Gaps                               #
 ############################################################
@@ -172,7 +175,7 @@ bindsym XF86AudioPrev exec playerctl previous
 ############################################################
 #Autostart programs
 exec spotify
-exec plexmediaplayer --scale-factor 2
+exec plexmediaplayer --scale-factor 1
 exec franz
 exec thunderbird
 exec compton
