--- a/packages/desktop/i3/config/polybar.config
+++ b/packages/desktop/i3/config/polybar.config
@@ -4,7 +4,7 @@
 monitor = HDMI-1
 monitor-fallback = eDP-1
 width = 100%
-height = 22
+height = 20
 
 background = #00000000
 foreground = #ccffffff
@@ -14,7 +14,7 @@ line-size = 10
 
 spacing = 2
 padding-right = 5
-module-margin = 4
+module-margin = 1
 
 font-0 = NotoSans-Regular:size=8;-1
 font-1 = MaterialIcons:size=10;0
@@ -24,12 +24,9 @@ font-4 = Font Awesome 5 Free Solid:pixelsize=10;0
 font-5 = Font Awesome 5 Brands:pixelsize=10;0
 font-6 = unifont:size=6;-3
 
-modules-left = ;
+modules-left = ranger notes
 modules-center = xwindow
-modules-right = backlight volume wireless-network wired-network battery date
-
-tray-position = left
-tray-padding = 2
+modules-right = backlight volume wireless-network wired-network battery calcurse date
 
 [bar/bottom]
 monitor = HDMI-1
@@ -70,6 +67,8 @@ format-charging = <animation-charging> <label-charging>
 format-discharging = <ramp-capacity> <label-discharging>
 format-full-foreground = #00cc00
 format-full = <ramp-capacity> <label-full>
+format-full-padding = 5
+format-ramp-padding = 5
 
 ramp-capacity-0 = 
 ramp-capacity-0-foreground = #f53c3c
@@ -215,6 +214,7 @@ label-empty-padding = 1
 type = internal/backlight
 card = intel_backlight
 format =  <label>
+format-padding = 5
 
 label = %percentage%
 
@@ -251,9 +251,9 @@ ramp-coreload-7-foreground = #ff5555
 
 [module/date]
 type = internal/date
-date =   %%{F#99}%m-%d-%Y%%{F-}  %%{F#fff}%H:%M%%{F-}
+date = %%{F#99}%m-%d-%Y%%{F-}  %%{F#fff}%H:%M%%{F-}
 date-alt = %%{F#fff}%A, %d %B %Y  %%{F#fff}%H:%M%%{F#666}:%%{F#fba922}%S%%{F-}
-
+#
 [module/memory]
 type = internal/memory
 format = <label> <bar-used>
@@ -279,9 +279,11 @@ interface = wlp2s0
 interval = 3.0
 ping-interval = 10
 
-format-connected = <ramp-signal> <label-connected>
+format-connected = <ramp-signal><label-connected>
+format-connected-padding = 5
+format-disconnected-padding = 5
 label-connected = %essid%
-label-disconnected =    not connected
+label-disconnected =   not connected
 label-disconnected-foreground = #66
 
 ramp-signal-0 = 
@@ -305,7 +307,7 @@ label-disconnected-foreground = #66
 [module/volume]
 type = internal/volume
 
-format-volume = <ramp-volume> <label-volume>
+format-volume = <ramp-volume><label-volume>
 
 label-volume = %{F-} %percentage%
 label-muted =  muted
@@ -325,4 +327,59 @@ date = %%{F#999}%Y-%m-%d%%{F-}  %%{F#fff}%H:%M%%{F-}
 type = internal/xwindow
 label = %title:0:60%
 
-; vim:ft=dosini
+[module/powermenu]
+type = custom/menu
+
+format-padding = 0
+
+expand-right = false
+
+label-open = 
+label-close = 
+label-separator = " "
+
+menu-0-0 = Suspend
+menu-0-0-foreground = #fba922
+menu-0-0-exec = menu-open-3
+menu-0-1 = Reboot
+menu-0-1-foreground = #fba922
+menu-0-1-exec = menu-open-1
+menu-0-2 = Power off
+menu-0-2-foreground = #fba922
+menu-0-2-exec = menu-open-2
+
+menu-1-0 = Cancel
+menu-1-0-foreground = #fba922
+menu-1-0-exec = menu-open-0
+menu-1-1 = Reboot
+menu-1-1-foreground = #fba922
+menu-1-1-exec = sudo reboot
+
+menu-2-0 = Power off
+menu-2-0-foreground = #fba922
+menu-2-0-exec = sudo poweroff
+menu-2-1 = Cancel
+menu-2-1-foreground = #fba922
+menu-2-1-exec = menu-open-0
+
+menu-3-0 = Suspend
+menu-3-0-foreground = #fba922
+menu-3-0-exec = sudo systemctl suspend
+menu-3-1 = Cancel
+menu-3-1-foreground = #fba922
+menu-3-1-exec = menu-open-0
+
+[module/calcurse]
+type = custom/text
+content = %{F#666}1%{F-} 
+click-left = bartermapp calcurse 0
+
+[module/ranger]
+type = custom/text
+content = %{F#666}2%{F-} 
+click-left = bartermapp ranger 1
+
+[module/notes]
+type = custom/text
+content = %{F#666}3%{F-} 
+click-left = bartermapp calcurse -t 2
