Added bartermapp and tdrop stuff

--- a/packages/desktop/i3/config/i3.config
+++ b/packages/desktop/i3/config/i3.config
@@ -24,9 +24,13 @@ bindsym $mod+Return exec xfce4-terminal
 bindsym $mod+g exec cool-retro-term
 # kill focused window
 bindsym $mod+Shift+q kill
-# start dmenu or rofi (a program launcher)
+# start rofi (a program launcher)
 bindsym Mod1+F3 exec rofi -show run -font "System San Francisco Display 14"
 bindsym $mod+d exec rofi -show run -font "System San Francisco Display 14"
+# start eidolon (rofi but for steam games)
+bindsym Mod1+F5 exec eidolon menu
+# rofi monitor select
+bindsym Mod1+F4 exec /home/jason/scripts/rofi-scripts/monitor_layout.sh
 # Firefox shortcut
 bindsym $mod+i exec firefox
 # Start Rofi ssh
@@ -36,10 +40,10 @@ bindsym $mod+u exec thunar
 #lock screen
 bindsym control+Mod1+l exec i3lock_improved --lock
 # Fix lockscreen image sizing
-bindsym $mod+Shift+s exec --no-startup-id /home/jason/lock_fix.sh
+bindsym $mod+Shift+s exec --no-startup-id /home/jason/scripts/lock_fix.sh
 
 # Toggle between internal and external monitor configs
-bindsym $mod+Shift+m exec --no-startup-id /home/jason/monitors.sh
+bindsym $mod+Shift+m exec --no-startup-id /home/jason/scripts/monitors.sh
 ############################################################
 #						Gaps                               #
 ############################################################
@@ -47,8 +51,8 @@ bindsym $mod+Shift+m exec --no-startup-id /home/jason/monitors.sh
 for_window [class="^.*"] border pixel 2
 smart_borders on
 smart_gaps on
-gaps inner 17
-gaps outer 3
+gaps inner 8
+gaps outer 0
 
 ############################################################
 #						General i3 Bindings                #
