--- a/packages/desktop/i3/config/polybar.config
+++ b/packages/desktop/i3/config/polybar.config
@@ -12,8 +12,8 @@ foreground = #ccffffff
 line-color = ${bar/bottom.background}
 line-size = 10
 
-spacing = 2
-padding-right = 5
+spacing = 0
+padding-right = 2
 module-margin = 1
 
 font-0 = NotoSans-Regular:size=8;-1
@@ -24,7 +24,7 @@ font-4 = Font Awesome 5 Free Solid:pixelsize=10;0
 font-5 = Font Awesome 5 Brands:pixelsize=10;0
 font-6 = unifont:size=6;-3
 
-modules-left = ranger notes
+modules-left = ;
 modules-center = xwindow
 modules-right = backlight volume wireless-network wired-network battery calcurse date
 
@@ -43,6 +43,7 @@ line-size = 2
 
 spacing = 3
 padding-right = 4
+padding-left = 3
 module-margin-left = 0
 module-margin-right = 6
 
@@ -67,8 +68,9 @@ format-charging = <animation-charging> <label-charging>
 format-discharging = <ramp-capacity> <label-discharging>
 format-full-foreground = #00cc00
 format-full = <ramp-capacity> <label-full>
-format-full-padding = 5
-format-ramp-padding = 5
+format-full-padding = 3
+format-charging-padding = 3
+format-discharging-padding = 3
 
 ramp-capacity-0 = 
 ramp-capacity-0-foreground = #f53c3c
@@ -214,7 +216,7 @@ label-empty-padding = 1
 type = internal/backlight
 card = intel_backlight
 format =  <label>
-format-padding = 5
+format-padding = 0
 
 label = %percentage%
 
@@ -280,8 +282,8 @@ interval = 3.0
 ping-interval = 10
 
 format-connected = <ramp-signal><label-connected>
-format-connected-padding = 5
-format-disconnected-padding = 5
+format-connected-paddingleft = 3
+format-disconnected-padding-left = 3
 label-connected = %essid%
 label-disconnected =   not connected
 label-disconnected-foreground = #66
@@ -308,6 +310,8 @@ label-disconnected-foreground = #66
 type = internal/volume
 
 format-volume = <ramp-volume><label-volume>
+format-volume-padding = 3
+format-muted-padding = 3
 
 label-volume = %{F-} %percentage%
 label-muted =  muted
@@ -371,15 +375,30 @@ menu-3-1-exec = menu-open-0
 
 [module/calcurse]
 type = custom/text
-content = %{F#666}1%{F-} 
+content = %{F-} 
 click-left = bartermapp calcurse 0
 
 [module/ranger]
 type = custom/text
-content = %{F#666}2%{F-} 
+content = %{F-} 
 click-left = bartermapp ranger 1
 
 [module/notes]
 type = custom/text
-content = %{F#666}3%{F-} 
+content = %{F-} 
 click-left = bartermapp calcurse -t 2
+
+[module/reddit]
+type = custom/text
+content = %{F-} 
+click-left = bartermapp rtv 2
+
+[module/telegram]
+type = custom/text
+content = %{F-} 
+click-left = bartermapp telegram.sh 3
+
+[module/discord]
+type = custom/text
+content = %{F-} 
+click-left = bartermapp discord 4
