Small updates to polybar, i3, and bartermapp

--- a/packages/desktop/i3/config/polybar.config
+++ b/packages/desktop/i3/config/polybar.config
@@ -28,6 +28,7 @@ modules-left = ;
 modules-center = xwindow
 modules-right = backlight volume wireless-network wired-network battery calcurse date
 
+#tray-position = left
 [bar/bottom]
 monitor = HDMI-1
 monitor-fallback = eDP-1
@@ -281,9 +282,9 @@ interface = wlp2s0
 interval = 3.0
 ping-interval = 10
 
-format-connected = <ramp-signal><label-connected>
-format-connected-paddingleft = 3
-format-disconnected-padding-left = 3
+format-connected = <ramp-signal> <label-connected>
+format-connected-paddingleft = 0
+format-disconnected-padding-left = 0
 label-connected = %essid%
 label-disconnected =   not connected
 label-disconnected-foreground = #66
@@ -402,3 +403,8 @@ click-left = bartermapp telegram.sh 3
 type = custom/text
 content = %{F-} 
 click-left = bartermapp discord 4
+
+[module/nmtui]
+type = custom/text
+content = %{F-} 
+click-left = bartermapp nmtui 1
