--- a/packages/shell/common/.rc
+++ b/packages/shell/common/.rc
@@ -47,3 +47,4 @@ alias party='curl parrot.live'
 alias nvimfiles='vim ~/dotfiles/packages/cli/nvim/config/nvim/init.vim ~/dotfiles/packages/cli/nvim/config/nvim/nvimFiles/*.vim'
 #alias circuitMod='java -jar ~/CircuitMod-v2.7/CircuitMod.jar'
 alias matlab='/usr/local/MATLAB/R2017b/bin/matlab -nodesktop'
+alias zork='frotz ~/zork/ZORKI'
