Added i3 scripts and made changes for them

--- a/packages/desktop/i3/config/i3.config
+++ b/packages/desktop/i3/config/i3.config
@@ -29,21 +29,22 @@ bindsym Mod1+F3 exec rofi -show run -font "System San Francisco Display 14"
 bindsym $mod+d exec rofi -show run -font "System San Francisco Display 14"
 # start eidolon (rofi but for steam games)
 bindsym Mod1+F5 exec eidolon menu
-# rofi monitor select
-bindsym Mod1+F4 exec /home/jason/scripts/rofi-scripts/monitor_layout.sh
+# rofi file selector
+bindsym Mod1+w exec rofi -show wallpaper -modi wallpaper:~/dotfiles/packages/desktop/i3/config/scripts/wallpaper.sh
 # Firefox shortcut
 bindsym $mod+i exec firefox
 # Start Rofi ssh
 bindsym Mod1+F7 exec rofi -show ssh -font "System San Francisco Display 14"
 # Thunar shortcut
-bindsym $mod+u exec thunar
+bindsym $mod+u exec xfce4-terminal -e "ranger"
 #lock screen
 bindsym control+Mod1+l exec i3lock_improved --lock
 # Fix lockscreen image sizing
-bindsym $mod+Shift+s exec --no-startup-id /home/jason/scripts/lock_fix.sh
+bindsym $mod+Shift+s exec --no-startup-id ~/dotfiles/packages/desktop/i3/config/scripts/lock_fix.sh
 
 # Toggle between internal and external monitor configs
-bindsym $mod+Shift+m exec --no-startup-id /home/jason/scripts/monitors.sh
+bindsym $mod+Shift+m exec --no-startup-id ~/dotfiles/packages/desktop/i3/config/scripts/1_monitor.sh
+bindsym $mod+Shift+n exec --no-startup-id ~/dotfiles/packages/desktop/i3/config/scripts/hdmi_1.sh
 ############################################################
 #						Gaps                               #
 ############################################################
@@ -70,9 +71,9 @@ bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
 
 # split in horizontal orientation
-bindsym $mod+Control+h split h
+bindsym $mod+Mod1+h split h
 # split in vertical orientation
-bindsym $mod+Control+v split v
+bindsym $mod+Mod1+v split v
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
@@ -179,18 +180,17 @@ bindsym XF86AudioPrev exec playerctl previous
 ############################################################
 #Autostart programs
 exec spotify
-exec plexmediaplayer --scale-factor 1
 exec franz
 exec thunderbird
 exec compton
-exec nm-applet
+#exec nm-applet
 exec dropbox
-exec_always --no-startup-id /home/jason/.config/polybar/launch.sh
+exec_always --no-startup-id ~/.config/polybar/launch.sh
 
 #Set wallpaper
-exec_always feh --bg-scale /home/jason/Pictures/the_fellowship.jpg
+exec_always feh --bg-scale ~/Pictures/Wallpapers/outrun.jpg
 
-############################################################
+###########################################################
 #						Misc                               #
 ############################################################
 # Set programs to always open in certain workspaces
