Moved i3 scripts so all scripts were using the same directory, and cleaned up the wallpaper script

--- a/packages/desktop/i3/config/i3.config
+++ b/packages/desktop/i3/config/i3.config
@@ -30,7 +30,7 @@ bindsym $mod+d exec rofi -show run -font "System San Francisco Display 14"
 # start eidolon (rofi but for steam games)
 bindsym Mod1+F5 exec eidolon menu
 # rofi file selector
-bindsym Mod1+w exec rofi -show wallpaper -modi wallpaper:~/dotfiles/packages/desktop/i3/config/scripts/wallpaper.sh
+bindsym Mod1+w exec rofi -show wallpaper -modi wallpaper:~/dotfiles/packages/desktop/i3/scripts/wallpaper.sh
 # Firefox shortcut
 bindsym $mod+i exec firefox
 # Start Rofi ssh
@@ -40,11 +40,11 @@ bindsym $mod+u exec xfce4-terminal -e "ranger"
 #lock screen
 bindsym control+Mod1+l exec i3lock_improved --lock
 # Fix lockscreen image sizing
-bindsym $mod+Shift+s exec --no-startup-id ~/dotfiles/packages/desktop/i3/config/scripts/lock_fix.sh
+bindsym $mod+Shift+s exec --no-startup-id ~/dotfiles/packages/desktop/i3/scripts/lock_fix.sh
 
 # Toggle between internal and external monitor configs
-bindsym $mod+Shift+m exec --no-startup-id ~/dotfiles/packages/desktop/i3/config/scripts/1_monitor.sh
-bindsym $mod+Shift+n exec --no-startup-id ~/dotfiles/packages/desktop/i3/config/scripts/hdmi_1.sh
+bindsym $mod+Shift+m exec --no-startup-id ~/dotfiles/packages/desktop/i3/scripts/1_monitor.sh
+bindsym $mod+Shift+n exec --no-startup-id ~/dotfiles/packages/desktop/i3/scripts/hdmi_1.sh
 ############################################################
 #						Gaps                               #
 ############################################################
@@ -188,7 +188,7 @@ exec dropbox
 exec_always --no-startup-id ~/.config/polybar/launch.sh
 
 #Set wallpaper
-exec_always feh --bg-scale ~/Pictures/Wallpapers/outrun.jpg
+exec_always ~/dotfiles/packages/desktop/i3/scripts/set_last_wp.sh
 
 ###########################################################
 #						Misc                               #
