Added more screen switching scripts, and an openvpn module in polybar

--- a/packages/desktop/i3/config/i3.config
+++ b/packages/desktop/i3/config/i3.config
@@ -36,7 +36,7 @@ bindsym $mod+i exec firefox
 # Start Rofi ssh
 bindsym Mod1+F7 exec rofi -show ssh -font "System San Francisco Display 14"
 # Thunar shortcut
-bindsym $mod+u exec xfce4-terminal -e "ranger"
+bindsym $mod+u exec Thunar
 #lock screen
 bindsym control+Mod1+l exec i3lock_improved --lock
 # Fix lockscreen image sizing
@@ -45,6 +45,7 @@ bindsym $mod+Shift+s exec --no-startup-id ~/dotfiles/packages/desktop/i3/scripts
 # Toggle between internal and external monitor configs
 bindsym $mod+Shift+m exec --no-startup-id ~/dotfiles/packages/desktop/i3/scripts/1_monitor.sh
 bindsym $mod+Shift+n exec --no-startup-id ~/dotfiles/packages/desktop/i3/scripts/hdmi_1.sh
+bindsym $mod+Shift+b exec --no-startup-id ~/dotfiles/packages/desktop/i3/scripts/hdmi_2.sh
 ############################################################
 #						Gaps                               #
 ############################################################
@@ -181,9 +182,9 @@ bindsym XF86AudioPrev exec playerctl previous
 #Autostart programs
 exec spotify
 exec franz
+exec signal-desktop
 exec thunderbird
 exec compton
-#exec nm-applet
 exec dropbox
 exec_always --no-startup-id ~/.config/polybar/launch.sh
 
@@ -195,7 +196,6 @@ exec_always ~/dotfiles/packages/desktop/i3/scripts/set_last_wp.sh
 ############################################################
 # Set programs to always open in certain workspaces
 for_window [class="Spotify"] move to workspace 8
-for_window [class="plexmediaplayer"] move to workspace 8
-for_window [class="GLava"] move to workspace 8
 assign [class="Franz"] 9
+assign [class="Signal"] 9
 assign [class="Thunderbird"] 10
