--- a/packages/desktop/i3/config/polybar.config
+++ b/packages/desktop/i3/config/polybar.config
@@ -24,7 +24,7 @@ font-4 = Font Awesome 5 Free Solid:pixelsize=10;0
 font-5 = Font Awesome 5 Brands:pixelsize=10;0
 font-6 = unifont:size=6;-3
 
-modules-left = ;
+modules-left = isrunning-openvpn
 modules-center = xwindow
 modules-right = backlight volume wireless-network wired-network battery calcurse date
 
@@ -301,7 +301,7 @@ animation-packetloss-framerate = 500
 
 [module/wired-network]
 type = internal/network
-interface = net0
+interface = usb0
 interval = 3.0
 
 label-connected =    %{T3}%local_ip%%{T-}
@@ -332,79 +332,13 @@ date = %%{F#999}%Y-%m-%d%%{F-}  %%{F#fff}%H:%M%%{F-}
 type = internal/xwindow
 label = %title:0:60%
 
-[module/powermenu]
-type = custom/menu
-
-format-padding = 0
-
-expand-right = false
-
-label-open = 
-label-close = 
-label-separator = " "
-
-menu-0-0 = Suspend
-menu-0-0-foreground = #fba922
-menu-0-0-exec = menu-open-3
-menu-0-1 = Reboot
-menu-0-1-foreground = #fba922
-menu-0-1-exec = menu-open-1
-menu-0-2 = Power off
-menu-0-2-foreground = #fba922
-menu-0-2-exec = menu-open-2
-
-menu-1-0 = Cancel
-menu-1-0-foreground = #fba922
-menu-1-0-exec = menu-open-0
-menu-1-1 = Reboot
-menu-1-1-foreground = #fba922
-menu-1-1-exec = sudo reboot
-
-menu-2-0 = Power off
-menu-2-0-foreground = #fba922
-menu-2-0-exec = sudo poweroff
-menu-2-1 = Cancel
-menu-2-1-foreground = #fba922
-menu-2-1-exec = menu-open-0
-
-menu-3-0 = Suspend
-menu-3-0-foreground = #fba922
-menu-3-0-exec = sudo systemctl suspend
-menu-3-1 = Cancel
-menu-3-1-foreground = #fba922
-menu-3-1-exec = menu-open-0
-
 [module/calcurse]
 type = custom/text
 content = %{F-} 
 click-left = bartermapp calcurse 0
 
-[module/ranger]
-type = custom/text
-content = %{F-} 
-click-left = bartermapp ranger 1
+[module/isrunning-openvpn]
+type = custom/script
+exec = ~/dotfiles/packages/desktop/i3/scripts/isrunning-openvpn.sh
+interval = 5
 
-[module/notes]
-type = custom/text
-content = %{F-} 
-click-left = bartermapp calcurse -t 2
-
-[module/reddit]
-type = custom/text
-content = %{F-} 
-click-left = bartermapp rtv 2
-
-[module/telegram]
-type = custom/text
-content = %{F-} 
-click-left = bartermapp telegram.sh 3
-
-[module/discord]
-type = custom/text
-content = %{F-} 
-click-left = bartermapp discord 4
-
-[module/nmtui]
-type = custom/text
-content = %{F-} 
-click-left = bartermapp nmtui 1
