Fixed/added several i3 bindings and some shell info

--- a/packages/desktop/i3/config/i3.config
+++ b/packages/desktop/i3/config/i3.config
@@ -28,19 +28,24 @@ bindsym $mod+Shift+q kill
 bindsym Mod1+F3 exec rofi -show run -font "System San Francisco Display 14"
 bindsym $mod+d exec rofi -show run -font "System San Francisco Display 14"
 # start eidolon (rofi but for steam games)
-bindsym Mod1+F5 exec eidolon menu
+bindsym $mod+F5 exec eidolon menu
 # rofi file selector
-bindsym Mod1+w exec rofi -show wallpaper -modi wallpaper:~/dotfiles/packages/desktop/i3/scripts/wallpaper.sh
+#bindsym Mod1+w exec rofi -show wallpaper -modi wallpaper:~/dotfiles/packages/desktop/i3/scripts/wallpaper.sh
+bindsym $mod+w exec urxvt -geometry 100x35 -e ranger $HOME/Pictures/Wallpapers
 # Firefox shortcut
 bindsym $mod+i exec firefox
+#Firefox private browsing
+bindsym $mod+p exec firefox -private-window
 # Start Rofi ssh
-bindsym Mod1+F7 exec rofi -show ssh -font "System San Francisco Display 14"
+bindsym $mod+F7 exec rofi -show ssh -font "System San Francisco Display 14"
 # Thunar shortcut
-bindsym $mod+u exec Thunar
+bindsym $mod+u exec urxvt -geometry 80x40 -e ranger
+# Calcurse
+bindsym $mod+c exec urxvt -geometry 80x40 -e calcurse
 #lock screen
 bindsym control+Mod1+l exec i3lock_improved --lock
 # Fix lockscreen image sizing
-bindsym $mod+Shift+s exec --no-startup-id ~/dotfiles/packages/desktop/i3/scripts/lock_fix.sh
+bindsym $mod+Control+s exec --no-startup-id ~/dotfiles/packages/desktop/i3/scripts/lock_fix.sh
 
 # Toggle between internal and external monitor configs
 bindsym $mod+Shift+m exec --no-startup-id ~/dotfiles/packages/desktop/i3/scripts/1_monitor.sh
@@ -80,9 +85,9 @@ bindsym $mod+Mod1+v split v
 bindsym $mod+f fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
+bindsym $mod+Shift+s layout stacking
+bindsym $mod+Shift+w layout tabbed
+bindsym $mod+Shift+e layout toggle split
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
@@ -130,7 +135,7 @@ bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
-bindsym $mod+Shift+e exit
+bindsym $mod+Control+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
 # Focus does not follow mouse
 focus_follows_mouse no
 
@@ -199,3 +204,5 @@ for_window [class="Spotify"] move to workspace 8
 assign [class="Franz"] 9
 assign [class="Signal"] 9
 assign [class="Thunderbird"] 10
+for_window [class="URxvt"] floating enable
+for_window [class="Galculator"] floating enable
