--- a/packages/desktop/i3/config/i3.config
+++ b/packages/desktop/i3/config/i3.config
@@ -14,34 +14,36 @@ floating_modifier $mod
 #						Font                               #
 ############################################################
 # sets general i3 font
-font pango:monospace 8
+font pango:DejaVu Sans Mono 10
 
 ############################################################
 #						Bindings                           #
 ############################################################
 # start a terminal
 bindsym $mod+Return exec xfce4-terminal
-bindsym $mod+g exec cool-retro-term
+bindsym Mod1+g exec cool-retro-term
 # kill focused window
 bindsym $mod+Shift+q kill
 # start rofi (a program launcher)
-bindsym Mod1+F3 exec rofi -show run -font "System San Francisco Display 14"
+#bindsym Mod1+F3 exec rofi -show run -font "System San Francisco Display 14"
 bindsym $mod+d exec rofi -show run -font "System San Francisco Display 14"
 # start eidolon (rofi but for steam games)
-bindsym $mod+F5 exec eidolon menu
+bindsym $mod+g exec eidolon menu
 # rofi file selector
 #bindsym Mod1+w exec rofi -show wallpaper -modi wallpaper:~/dotfiles/packages/desktop/i3/scripts/wallpaper.sh
 bindsym $mod+w exec urxvt -geometry 100x35 -e ranger $HOME/Pictures/Wallpapers
-# Firefox shortcut
-bindsym $mod+i exec firefox
-#Firefox private browsing
-bindsym $mod+p exec firefox -private-window
+# palemoon shortcut
+bindsym $mod+i exec palemoon
+#palemoon private browsing
+bindsym $mod+p exec palemoon -private-window
 # Start Rofi ssh
-bindsym $mod+F7 exec rofi -show ssh -font "System San Francisco Display 14"
+bindsym $mod+s exec rofi -show ssh -font "System San Francisco Display 14"
 # Thunar shortcut
-bindsym $mod+u exec urxvt -geometry 80x40 -e ranger
+bindsym $mod+u exec urxvt -geometry 80x40 -e ranger $HOME/Documents
 # Calcurse
 bindsym $mod+c exec urxvt -geometry 80x40 -e calcurse
+# Floating terminal
+bindsym $mod+t exec urxvt
 #lock screen
 bindsym control+Mod1+l exec i3lock_improved --lock
 # Fix lockscreen image sizing
@@ -51,6 +53,9 @@ bindsym $mod+Control+s exec --no-startup-id ~/dotfiles/packages/desktop/i3/scrip
 bindsym $mod+Shift+m exec --no-startup-id ~/dotfiles/packages/desktop/i3/scripts/1_monitor.sh
 bindsym $mod+Shift+n exec --no-startup-id ~/dotfiles/packages/desktop/i3/scripts/hdmi_1.sh
 bindsym $mod+Shift+b exec --no-startup-id ~/dotfiles/packages/desktop/i3/scripts/hdmi_2.sh
+
+# screenshots using flameshot
+bindsym $mod+Print exec flameshot gui
 ############################################################
 #						Gaps                               #
 ############################################################
@@ -58,8 +63,8 @@ bindsym $mod+Shift+b exec --no-startup-id ~/dotfiles/packages/desktop/i3/scripts
 for_window [class="^.*"] border pixel 2
 smart_borders on
 smart_gaps on
-gaps inner 5
-gaps outer 0
+gaps inner 20
+gaps outer 5
 
 ############################################################
 #						General i3 Bindings                #
@@ -93,7 +98,7 @@ bindsym $mod+Shift+e layout toggle split
 bindsym $mod+Shift+space floating toggle
 
 # change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
+bindsym Mod1+Tab focus mode_toggle
 
 # focus the parent container
 bindsym $mod+a focus parent
@@ -206,3 +211,6 @@ assign [class="Signal"] 9
 assign [class="Thunderbird"] 10
 for_window [class="URxvt"] floating enable
 for_window [class="Galculator"] floating enable
+for_window [class="Gnome-pomodoro"] floating enable
+for_window [class="Arandr"] floating enable
+for_window [class="retroarch"] floating enable
