--- a/packages/desktop/i3/config/rofi.config
+++ b/packages/desktop/i3/config/rofi.config
@@ -8,13 +8,13 @@ rofi.color-active: argb:aefdf6e3, #303541, argb:bceee8d5, argb:ae268bd2, #fdf6e3
 rofi.color-urgent: argb:79303541, #dc322f, argb:00eee8d5, argb:00dc322f, argb:00fdf6e3
 
 
-rofi.lines:3
-rofi.width: 85
+rofi.lines:5
+rofi.width: 60
 rofi.modi: window,run
-rofi.terminal: rofi-sensible-terminal
+rofi.terminal: xfce4-terminal
 rofi.ssh-client: ssh
 rofi.ssh-command: {terminal} -e "{ssh-client} {host}"
 rofi.case-sensitive: false
 rofi.eh: 2
-rofi.padding: 340
+rofi.padding: 150
 rofi.hide-scrollbar: true
