Fixed font issues on install on new computer

--- a/packages/desktop/i3/config/polybar.config
+++ b/packages/desktop/i3/config/polybar.config
@@ -4,7 +4,7 @@
 monitor = HDMI-1
 monitor-fallback = eDP-1
 width = 100%
-height = 20
+height = 18
 
 background = #66000000
 foreground = #ccffffff
@@ -17,12 +17,9 @@ padding-right = 2
 module-margin = 1
 
 font-0 = NotoSans-Regular:size=8;-1
-font-1 = MaterialIcons:size=10;0
-font-2 = Termsynu:size=8:antialias=false;-2
-font-3 = Font Awesome 5 Free:pixelsize=10;0
-font-4 = Font Awesome 5 Free Solid:pixelsize=10;0
-font-5 = Font Awesome 5 Brands:pixelsize=10;0
-font-6 = unifont:size=6;-3
+font-1 = MaterialIcons:size=8;0
+font-2 = Font Awesome 5 Free:style=Regular:pixelsize=8;0
+font-3 = Font Awesome 5 Free:style=Solid:pixelsize=8;0
 
 modules-left = isrunning-openvpn
 modules-center = xwindow
@@ -34,7 +31,7 @@ monitor = HDMI-1
 monitor-fallback = eDP-1
 bottom = true
 width = 100%
-height = 27
+height = 20
 
 background = ${bar/top.background}
 foreground = ${bar/top.foreground}
@@ -48,15 +45,11 @@ padding-left = 3
 module-margin-left = 0
 module-margin-right = 6
 
-font-0 = NotoSans-Regular:size=8;0
-font-1 = unifont:size=6;-3
-font-2 = Font Awesome 5 Free:pixelsize=10;0
-font-3 = Font Awesome 5 Free Solid:pixelsize=10;0
-font-4 = Font Awesome 5 Brands:pixelsize=10;0
-font-5 = NotoSans-Regular:size=8;-1
-font-6 = MaterialIcons:size=10;-1
-font-7 = Termsynu:size=8:antialias=false;0
-font-8 = System San Francisco Display:size=6,-10
+font-0 = NotoSans-Regular:size=6;0
+font-1 = Font Awesome 5 Free:style=Regular:pixelsize=8;0
+font-2 = Font Awesome 5 Free:style=Solid:pixelsize=8;0
+font-3 = NotoSans-Regular:size=6;-1
+font-4 = System San Francisco Display:size=6,-10
 
 modules-left = i3
 modules-right = cpu memory
@@ -124,13 +117,13 @@ ws-icon-default = 
 
 ; focused = Active workspace on focused monitor
 label-focused = %index%   %icon%
-label-focused-background = ${module/bspwm.label-active-background}
-label-focused-underline = ${module/bspwm.label-active-underline}
-label-focused-padding = ${module/bspwm.label-active-padding}
+label-focused-background = $#773f3f3f
+label-focused-underline = #4a1599
+label-focused-padding =4
 
 ; unfocused = Inactive workspace on any monitor
 label-unfocused = %index%   %icon%
-label-unfocused-padding = ${module/bspwm.label-occupied-padding}
+label-unfocused-padding = 4
 
 ; visible = Active workspace on unfocused monitor
 label-visible = %index%   %icon%
@@ -140,78 +133,8 @@ label-visible-padding = ${self.label-focused-padding}
 
 ; urgent = Workspace with urgency hint set
 label-urgent = %index%   %icon%
-label-urgent-background = ${module/bspwm.label-urgent-background}
-label-urgent-padding = ${module/bspwm.label-urgent-padding}
-
-[module/bspwm]
-type = internal/bspwm
-
-ws-icon-0 = term;
-ws-icon-1 = web;
-ws-icon-2 = code;
-ws-icon-3 = music;
-ws-icon-4 = irssi;
-ws-icon-default = 
-
-format = <label-state> <label-mode>
-
-label-dimmed-underline = ${BAR.background}
-
-label-active = %icon%
-label-active-foreground = #fff
-label-active-background = #773f3f3f
-label-active-underline = #4a1599
-label-active-font = 4
-label-active-padding = 4
-
-label-occupied = %icon%
-label-occupied-foreground = #dd
-label-occupied-underline = #666
-label-occupied-font = 4
-label-occupied-padding = 4
-
-label-urgent = %icon%
-label-urgent-foreground = #000000
 label-urgent-background = #bd2c40
-label-urgent-underline = #9b0a20
-label-urgent-font = 4
 label-urgent-padding = 4
-
-label-empty = %icon%
-label-empty-foreground = #55
-label-empty-font = 4
-label-empty-padding = 4
-
-label-monocle = 
-label-monocle-underline = ${module/bspwm.label-active-underline}
-label-monocle-background = #33ffffff
-label-monocle-padding = 2
-
-label-locked = 
-label-locked-foreground = #bd2c40
-label-locked-underline = ${module/bspwm.label-monocle-underline}
-label-locked-padding = ${module/bspwm.label-monocle-padding}
-
-label-sticky = 
-label-sticky-foreground = #fba922
-label-sticky-underline = ${module/bspwm.label-monocle-underline}
-label-sticky-padding = ${module/bspwm.label-monocle-padding}
-
-label-private = 
-label-private-foreground = #bd2c40
-label-private-underline = ${module/bspwm.label-monocle-underline}
-label-private-padding = ${module/bspwm.label-monocle-padding}
-
-[module/bspwm-tmp]
-type = internal/bspwm
-format = <label-state>
-
-label-active = 
-label-active-padding = 1
-label-occupied = 
-label-occupied-padding = 1
-label-empty = 
-label-empty-padding = 1
 
 [module/backlight]
 type = internal/backlight
@@ -289,9 +212,9 @@ label-connected = %essid%
 label-disconnected =   not connected
 label-disconnected-foreground = #66
 
-ramp-signal-0 = 
-ramp-signal-1 = 
-ramp-signal-2 = 
+ramp-signal-0 = 
+ramp-signal-1 = 
+ramp-signal-2 = 
 
 animation-packetloss-0 = 
 animation-packetloss-0-foreground = #ffa64c
