Switched back to firefox

--- a/packages/desktop/i3/config/i3.config
+++ b/packages/desktop/i3/config/i3.config
@@ -32,10 +32,10 @@ bindsym $mod+g exec eidolon menu
 # rofi file selector
 #bindsym Mod1+w exec rofi -show wallpaper -modi wallpaper:~/dotfiles/packages/desktop/i3/scripts/wallpaper.sh
 bindsym $mod+w exec urxvt -geometry 100x35 -e ranger $HOME/Pictures/Wallpapers
-# palemoon shortcut
-bindsym $mod+i exec palemoon
-#palemoon private browsing
-bindsym $mod+p exec palemoon -private-window
+# firefox shortcut
+bindsym $mod+i exec firefox
+#firefox private browsing
+bindsym $mod+p exec firefox -private-window
 # Start Rofi ssh
 bindsym $mod+s exec rofi -show ssh -font "System San Francisco Display 14"
 # Thunar shortcut
