Fixed up more things on new install.

--- a/packages/cli/ranger/config/ranger/rc.conf
+++ b/packages/cli/ranger/config/ranger/rc.conf
@@ -657,10 +657,7 @@ copytmap <ESC> q Q w <C-c>
 
 # Setting images as wallpaper and lock screen
 map bw shell feh --bg-scale %f && cp %f ~/.local/share/ranger/wallpaper/wall.png
-map bl shell cp %f ~/Pictures/lock_screen.png && ~/dotfiles/packages/desktop/i3/scripts/lock_fix.sh
+map bl shell cp %f ~/Pictures/lockscreen_cache/lock_screen.png
 
 # Filter as you type
 map f console scout -ftsea%space
-# a plugin that adds file glyphs / icon support to Ranger:
-# https://github.com/alexanderjeurissen/ranger_devicons
-default_linemode devicons
