--- a/packages/desktop/i3/config/i3.config
+++ b/packages/desktop/i3/config/i3.config
@@ -44,10 +44,10 @@ bindsym $mod+u exec urxvt -geometry 80x40 -e ranger $HOME/Documents
 bindsym $mod+c exec urxvt -geometry 80x40 -e calcurse
 # Floating terminal
 bindsym $mod+t exec urxvt
+# Neomutt
+bindsym $mod+m exec urxvt -geometry 236x70 -e neomutt
 #lock screen
-bindsym control+Mod1+l exec i3lock_improved --lock
-# Fix lockscreen image sizing
-bindsym $mod+Control+s exec --no-startup-id ~/dotfiles/packages/desktop/i3/scripts/lock_fix.sh
+bindsym control+Mod1+l exec lock -a t e c 000000
 
 # Toggle between internal and external monitor configs
 bindsym $mod+Shift+m exec --no-startup-id ~/dotfiles/packages/desktop/i3/scripts/1_monitor.sh
@@ -193,9 +193,11 @@ bindsym XF86AudioPrev exec playerctl previous
 exec spotify
 exec franz
 exec signal-desktop
-exec thunderbird
+#exec thunderbird
+exec urxvt -e neomutt
 exec compton
-exec dropbox
+exec udiskie
+exec xautolock -time 10 -locker 'lock -a t e c 000000'
 exec_always --no-startup-id ~/.config/polybar/launch.sh
 
 #Set wallpaper
@@ -208,8 +210,9 @@ exec_always ~/dotfiles/packages/desktop/i3/scripts/set_last_wp.sh
 for_window [class="Spotify"] move to workspace 8
 assign [class="Franz"] 9
 assign [class="Signal"] 9
-assign [class="Thunderbird"] 10
+#assign [class="Thunderbird"] 10
 for_window [class="URxvt"] floating enable
+for_window [title="neomutt"] floating disable move to workspace 10
 for_window [class="Galculator"] floating enable
 for_window [class="Gnome-pomodoro"] floating enable
 for_window [class="Arandr"] floating enable
