--- a/packages/desktop/i3/config/polybar.config
+++ b/packages/desktop/i3/config/polybar.config
@@ -17,15 +17,14 @@ padding-right = 2
 module-margin = 1
 
 font-0 = NotoSans-Regular:size=8;-1
-font-1 = MaterialIcons:size=8;0
-font-2 = Font Awesome 5 Free:style=Regular:pixelsize=8;0
-font-3 = Font Awesome 5 Free:style=Solid:pixelsize=8;0
+font-1 = Font Awesome 5 Free:style=Regular:pixelsize=8;0
+font-2 = Font Awesome 5 Free:style=Solid:pixelsize=8;0
 
-modules-left = isrunning-openvpn
+#modules-left = isrunning-openvpn
 modules-center = xwindow
-modules-right = backlight volume wireless-network wired-network battery calcurse date
+modules-right = backlight volume wireless-network wired-network battery date
 
-#tray-position = left
+tray-position = left
 [bar/bottom]
 monitor = HDMI-1
 monitor-fallback = eDP-1
@@ -177,8 +176,8 @@ ramp-coreload-7-foreground = #ff5555
 
 [module/date]
 type = internal/date
-date = %%{F#99}%m-%d-%Y%%{F-}  %%{F#fff}%H:%M%%{F-}
-date-alt = %%{F#fff}%A, %d %B %Y  %%{F#fff}%H:%M%%{F#666}:%%{F#fba922}%S%%{F-}
+date =   %%{F#99}%m-%d-%Y%%{F-}  %%{F#fff}%H:%M%%{F-}
+date-alt =   %%{F#fff}%A, %d %B %Y  %%{F#fff}%H:%M%%{F#666}:%%{F#fba922}%S%%{F-}
 #
 [module/memory]
 type = internal/memory
@@ -231,7 +230,7 @@ label-connected =    %{T3}%local_ip%%{T-}
 label-disconnected-foreground = #66
 
 [module/volume]
-type = internal/volume
+type = internal/alsa
 
 format-volume = <ramp-volume><label-volume>
 format-volume-padding = 3
@@ -255,10 +254,10 @@ date = %%{F#999}%Y-%m-%d%%{F-}  %%{F#fff}%H:%M%%{F-}
 type = internal/xwindow
 label = %title:0:60%
 
-[module/calcurse]
-type = custom/text
-content = %{F-} 
-click-left = bartermapp calcurse 0
+#[module/calcurse]
+#type = custom/text
+#content = %{F-} 
+#click-left = bartermapp calcurse 0
 
 [module/isrunning-openvpn]
 type = custom/script
