--- a/packages/shell/common/.rc
+++ b/packages/shell/common/.rc
@@ -45,11 +45,6 @@ fi
 typeset -A ZSH_HIGHLIGHT_STYLES
 ZSH_HIGHLIGHT_STYLES[globbing]='fg=blue,bold'
 
-alias resedit='vim ~/Documents/resume/jason_blocklove_resume.tex ~/Documents/resume/awesome-cv.cls ~/Documents/resume/resume/*.tex'
-alias caps='xmodmap ~/.xmodmap'
 alias party='curl parrot.live'
-alias nvimfiles='vim ~/dotfiles/packages/cli/nvim/config/nvim/init.vim ~/dotfiles/packages/cli/nvim/config/nvim/nvimFiles/*.vim'
-#alias circuitMod='java -jar ~/CircuitMod-v2.7/CircuitMod.jar'
-alias matlab='/usr/local/MATLAB/R2018b/bin/matlab -nodesktop'
 alias zork='frotz ~/zork/ZORKI'
-alias edex='cd ~/AUR/edex-ui && npm start&'
+alias diff='nvim -d'
