--- a/packages/cli/ranger/config/ranger/rifle.conf
+++ b/packages/cli/ranger/config/ranger/rifle.conf
@@ -84,7 +84,7 @@ ext x?html?, has w3m,               terminal = w3m "$@"
 #-------------------------------------------
 # Misc
 #-------------------------------------------
-ext csv =  libreoffice -o "$@"
+ext csv =  scim "$@"
 # Define the "editor" for text files as first action
 mime ^text,  label editor = ${VISUAL:-$EDITOR} -- "$@"
 mime ^text,  label pager  = "$PAGER" -- "$@"
@@ -141,9 +141,9 @@ mime ^video, terminal, !X, has mplayer   = mplayer -- "$@"
 #-------------------------------------------
 # Documents
 #-------------------------------------------
+ext pdf, has zathura,  X, flag f = zathura -- "$@"
 ext pdf, has evince,   X, flag f = evince -- "$@"
 ext pdf, has llpp,     X, flag f = llpp "$@"
-ext pdf, has zathura,  X, flag f = zathura -- "$@"
 ext pdf, has mupdf,    X, flag f = mupdf "$@"
 ext pdf, has mupdf-x11,X, flag f = mupdf-x11 "$@"
 ext pdf, has apvlv,    X, flag f = apvlv -- "$@"
