Fix untracked files

--- a/packages/desktop/i3/config/i3.config
+++ b/packages/desktop/i3/config/i3.config
@@ -41,11 +41,11 @@ bindsym $mod+s exec rofi -show ssh -font "System San Francisco Display 14"
 # Thunar shortcut
 bindsym $mod+u exec urxvt -geometry 80x40 -e ranger $HOME/Documents
 # Calcurse
-bindsym $mod+c exec urxvt -geometry 80x40 -e calcurse
+bindsym $mod+c exec urxvt -geometry 100x50 -e calcurse
 # Floating terminal
 bindsym $mod+t exec urxvt
 # Neomutt
-bindsym $mod+m exec urxvt -geometry 236x70 -e neomutt
+bindsym $mod+m exec urxvt -e neomutt
 #lock screen
 bindsym control+Mod1+l exec lock -a t e c 000000
 
@@ -197,6 +197,8 @@ exec signal-desktop
 exec urxvt -e neomutt
 exec compton
 exec udiskie
+exec caffeine
+exec blueman-applet
 exec xautolock -time 10 -locker 'lock -a t e c 000000'
 exec_always --no-startup-id ~/.config/polybar/launch.sh
 
@@ -210,10 +212,12 @@ exec_always ~/dotfiles/packages/desktop/i3/scripts/set_last_wp.sh
 for_window [class="Spotify"] move to workspace 8
 assign [class="Franz"] 9
 assign [class="Signal"] 9
-#assign [class="Thunderbird"] 10
+#assign [class="Termite"] 10
 for_window [class="URxvt"] floating enable
-for_window [title="neomutt"] floating disable move to workspace 10
+for_window [title="neomutt" class="URxvt"] floating disable move to workspace 10
 for_window [class="Galculator"] floating enable
 for_window [class="Gnome-pomodoro"] floating enable
 for_window [class="Arandr"] floating enable
 for_window [class="retroarch"] floating enable
+for_window [class="Pavucontrol"] floating enable
+for_window [class="Blueman-manager"] floating enable
