--- a/packages/shell/common/.rc
+++ b/packages/shell/common/.rc
@@ -48,3 +48,4 @@ ZSH_HIGHLIGHT_STYLES[globbing]='fg=blue,bold'
 alias party='curl parrot.live'
 alias zork='frotz ~/zork/ZORKI'
 alias diff='nvim -d'
+alias scim='sc-im'
