updated ranger scripts

--- a/packages/cli/ranger/config/ranger/rc.conf
+++ b/packages/cli/ranger/config/ranger/rc.conf
@@ -661,3 +661,10 @@ map bl shell cp %f ~/Pictures/lockscreen/lock_screen.png
 
 # Filter as you type
 map f console scout -ftsea%space
+
+# Extract zip files
+map e shell ~/.config/ranger/extract.sh %f
+#ext zip, has unzip = for file in "$@"; do unzip -d "${file%.*}" "$file"; done
+
+#map Gv cd /etc/openvpn/ovpn_tcp
+#map vpn sudo openvpn %f
